toggle day night

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="cursorTail.css">
-        <link rel="stylesheet" href="daynight.css">
+        <link rel="stylesheet" href="css/cursorTail.css">
+        <link rel="stylesheet" href="css/daynight.css">
+        <link rel="stylesheet" href="css/style.css">
         <title>Welcome, I'm Daniel Atlas</title>
     </head>
     <body>
@@ -38,5 +39,6 @@
             </div>
         </label>
     </body>
-    <script src="mouseScript.js"></script>
+    <script src="js/mouseScript.js"></script>
+    <script src="js/script.js"></script>
 </html>
