--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="css/daynight.css">
         <link rel="stylesheet" href="css/style.css">
         <title>Welcome, I'm Daniel Atlas</title>
+        <link rel="icon" type="image/png" href="imgs/favicon.png">
     </head>
     <body>
         <div class="circleTail"></div>
