--- a/index.html
+++ b/index.html
@@ -10,15 +10,17 @@
         <link rel="icon" type="image/png" href="imgs/favicon.png">
     </head>
     <body>
-        <div class="circleTail"></div>
-        <div class="circleTail"></div>
-        <div class="circleTail"></div>
-        <div class="circleTail"></div>
-        <div class="circleTail"></div>
-        <div class="circleTail"></div>
-        <div class="circleTail"></div>
-        <div class="circleTail"></div>
-        <div class="circleTail"></div>
+        <section>
+            <div class="circleTail"></div>
+            <div class="circleTail"></div>
+            <div class="circleTail"></div>
+            <div class="circleTail"></div>
+            <div class="circleTail"></div>
+            <div class="circleTail"></div>
+            <div class="circleTail"></div>
+            <div class="circleTail"></div>
+            <div class="circleTail"></div>
+        </section>
         <label class="theme-switch">
             <input type="checkbox" class="theme-switch__checkbox">
             <div class="theme-switch__container">
