404 page text unselectable

--- a/404.html
+++ b/404.html
@@ -39,7 +39,7 @@
             <div class="number">4</div>
             </div>
             <div class="subtitle">Oops. Looks like you took a wrong turn.</div>
-            <button onclick="window.history.back()">Go back</button>
+            <button onclick="window.history.back()" class="gobackbtn">Go back</button>
         </div>
     </div>
 </html>
