--- a/404.html
+++ b/404.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="css/404.css">
+        <link rel="stylesheet" href="/css/404.css">
         <title>Oops, Fage Not Found</title>
-        <link rel="icon" type="image/png" href="imgs/favicon.png">
+        <link rel="icon" type="image/png" href="/imgs/favicon.png">
     </head>
 
     <div class="container container-star">
@@ -39,7 +39,7 @@
             <div class="number">4</div>
             </div>
             <div class="subtitle">Oops. Looks like you took a wrong turn.</div>
-            <button onclick="window.history.back()" class="gobackbtn">Go back</button>
+            <button onclick="window.history.back()">Go back</button>
         </div>
     </div>
 </html>
