--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="css/cursorTail.css">
-        <link rel="stylesheet" href="css/daynight.css">
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="/css/cursorTail.css">
+        <link rel="stylesheet" href="/css/daynight.css">
+        <link rel="stylesheet" href="/css/style.css">
         <title>Welcome, I'm Daniel Atlas</title>
-        <link rel="icon" type="image/png" href="imgs/favicon.png">
+        <link rel="icon" type="image/png" href="/imgs/favicon.png">
     </head>
     <body>
         <section>
@@ -42,6 +42,6 @@
             </div>
         </label>
     </body>
-    <script src="js/mouseScript.js"></script>
-    <script src="js/script.js"></script>
+    <script src="/js/mouseScript.js"></script>
+    <script src="/js/script.js"></script>
 </html>
