--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link rel="icon" type="image/png" href="/imgs/favicon.png">
     </head>
     <body>
-        <section>
+        <section class="mouseTail">
             <div class="circleTail"></div>
             <div class="circleTail"></div>
             <div class="circleTail"></div>
