--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="/css/cursorTail.css">
         <link rel="stylesheet" href="/css/daynight.css">
+        <link rel="stylesheet" href="/css/titleText.css">
         <link rel="stylesheet" href="/css/style.css">
         <title>Welcome, I'm Daniel Atlas</title>
         <link rel="icon" type="image/png" href="/imgs/favicon.png">
@@ -21,6 +22,7 @@
             <div class="circleTail"></div>
             <div class="circleTail"></div>
         </section>
+
         <label class="theme-switch">
             <input type="checkbox" class="theme-switch__checkbox">
             <div class="theme-switch__container">
@@ -41,7 +43,22 @@
                 </div>
             </div>
         </label>
+
+        <div class="rotating-text">
+            <p class="text-to-toggle">
+                Greetings, and welcome to a world of</p>
+            <p>
+              <span class="word alizarin">possibilities.</span>
+              <span class="word wisteria">creation.</span>
+              <span class="word peter-river">future.</span>
+              <span class="word emerald">ideas.</span>
+              <span class="word sun-flower">inspiration.</span>
+            </p>
+        </div>
+
+        <!-- <img src="/imgs/photo.png" class="my-photo" alt="Photo of Daniel Atlas"> -->
     </body>
+    <script src="/js/titleText.js"></script>
     <script src="/js/mouseScript.js"></script>
     <script src="/js/script.js"></script>
 </html>
