text align for mobile

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="rotating-text">
             <p class="text-to-toggle">
                 Greetings, and welcome to a world of</p>
-            <p>
+            <p class="text-to-animation">
               <span class="word alizarin">possibilities.</span>
               <span class="word wisteria">creation.</span>
               <span class="word peter-river">future.</span>
