scroll-to-explore

--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
             </p>
         </div>
 
+        <div class="scroll-to-explore">
+            <p class="text-to-toggle">SCROLL TO EXPLORE</p>
+        </div>
+
         <!-- <img src="/imgs/photo.png" class="my-photo" alt="Photo of Daniel Atlas"> -->
     </body>
     <script src="/js/titleText.js"></script>
