blank space | cursorTail with Y offset

--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
             <p class="text-to-toggle">SCROLL TO EXPLORE</p>
         </div>
 
+        <div class="scroll-space"></div>
+
         <!-- <img src="/imgs/photo.png" class="my-photo" alt="Photo of Daniel Atlas"> -->
     </body>
     <script src="/js/titleText.js"></script>
