hidden scroll bar

--- a/index.html
+++ b/index.html
@@ -60,6 +60,10 @@
             <p class="text-to-toggle">SCROLL TO EXPLORE</p>
         </div>
 
+        <div class="my-name">
+            <p>Daniel Atlas</p>
+        </div>
+
         <div class="scroll-space"></div>
 
         <!-- <img src="/imgs/photo.png" class="my-photo" alt="Photo of Daniel Atlas"> -->
