my name animation

--- a/index.html
+++ b/index.html
@@ -61,7 +61,15 @@
         </div>
 
         <div class="my-name">
-            <p>Daniel Atlas</p>
+            <p class="text-to-toggle">
+                <span class="masked-first-text">
+                    <span class="first-text">Daniel</span>
+                </span>
+                <br>
+                <span class="masked-second-text">
+                    <span class="second-text">Atlas</span>
+                </span>
+            </p>
         </div>
 
         <div class="scroll-space"></div>
