--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
         <div class="my-name">
             <p class="text-to-toggle">
                 <span class="masked-first-text">
-                    <span class="first-text">Daniel</span>
+                    <span class="first-text">Daniel Atlas</span>
                 </span>
                 <br>
                 <span class="masked-second-text">
-                    <span class="second-text">Atlas</span>
+                    <span class="second-text">New York University</span>
                 </span>
             </p>
         </div>
