--- a/index.html
+++ b/index.html
@@ -72,11 +72,24 @@
             </p>
         </div>
 
+        <div class="line-container">
+            <svg width="2801" height="1309" viewBox="0 0 2801 1309" fill="none" preserveAspectRatio="xMidYMax meet">
+                <path d="M2796.5 1229C2714.83 1227.83 2834 1076.5 2759.5 1076.5C2685 1076.5 2351.07 972 2229 972C2149 972 2094 1320 1957.5 1292C1821 1264 2013.69 907.305 1822.5 792C1725.5 733.5 1661 694.604 1468 792C1344.65 854.246 1265 814 1176.5 737.5C1125.06 693.031 1054.5 430.209 911.5 399.709C855.5 387.765 620 340.126 502 443.709C407.687 526.5 306.5 633.709 396.5 713.709C484.25 791.71 700.5 756.709 758.5 566.209C775.5 527.209 791.046 356.074 780.5 300.709C758.5 185.209 687 110.709 644.5 81.7094C602 52.7094 510.5 -5.29071 396.5 22.2093C135 85.2904 14 380.709 14 380.709" stroke="url(#paint0_linear_1_28)" stroke-width="30"/>
+                <defs>
+                <linearGradient id="paint0_linear_1_28" x1="1222.5" y1="-80" x2="1405.25" y2="1293.6" gradientUnits="userSpaceOnUse">
+                <stop stop-color="#57058B"/>
+                <stop offset="1" stop-color="#3844EE"/>
+                </linearGradient>
+                </defs>
+            </svg>
+        </div>
+
         <div class="scroll-space"></div>
 
         <!-- <img src="/imgs/photo.png" class="my-photo" alt="Photo of Daniel Atlas"> -->
     </body>
     <script src="/js/titleText.js"></script>
     <script src="/js/mouseScript.js"></script>
+    <script src="/js/lineScript.js"></script>
     <script src="/js/script.js"></script>
 </html>
