--- a/index.html
+++ b/index.html
@@ -61,15 +61,18 @@
         </div>
 
         <div class="my-name">
-            <p class="text-to-toggle">
-                <span class="masked-first-text">
-                    <span class="first-text">Daniel Atlas</span>
-                </span>
-                <br>
-                <span class="masked-second-text">
-                    <span class="second-text">New York University</span>
-                </span>
-            </p>
+            <!-- parallel added after all finished -->
+            <!-- <div class="parallax" data-rate=".3" data-direction="vertical"> -->
+                <p class="text-to-toggle">
+                    <span class="masked-first-text">
+                        <span class="first-text">Daniel Atlas</span>
+                    </span>
+                    <br>
+                    <span class="masked-second-text">
+                        <span class="second-text">New York University</span>
+                    </span>
+                </p>
+            <!-- </div> -->
         </div>
 
         <div class="line-container">
@@ -84,9 +87,13 @@
             </svg>
         </div>
 
+        <div class="photo-container">
+            <!-- <img src="/imgs/photo.jpg"> -->
+        </div>
+
         <div class="scroll-space"></div>
 
-        <!-- <img src="/imgs/photo.png" class="my-photo" alt="Photo of Daniel Atlas"> -->
+        
     </body>
     <script src="/js/titleText.js"></script>
     <script src="/js/mouseScript.js"></script>
