my photo and parallax

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
         <div class="my-name">
             <!-- parallel added after all finished -->
-            <!-- <div class="parallax" data-rate=".3" data-direction="vertical"> -->
+            <div class="parallax" data-rate=".3" data-direction="vertical">
                 <p class="text-to-toggle">
                     <span class="masked-first-text">
                         <span class="first-text">Daniel Atlas</span>
@@ -72,7 +72,7 @@
                         <span class="second-text">New York University</span>
                     </span>
                 </p>
-            <!-- </div> -->
+            </div>
         </div>
 
         <div class="line-container">
@@ -87,8 +87,11 @@
             </svg>
         </div>
 
+        
         <div class="photo-container">
-            <!-- <img src="/imgs/photo.jpg"> -->
+            <div class="parallax" data-rate=".4" data-direction="vertical">
+                <img src="/imgs/photo.jpg" style="border-radius: 50%;" width="200">
+            </div>
         </div>
 
         <div class="scroll-space"></div>
