parallax for svg | responsiveness for parallax and photo

--- a/index.html
+++ b/index.html
@@ -61,7 +61,6 @@
         </div>
 
         <div class="my-name">
-            <!-- parallel added after all finished -->
             <div class="parallax" data-rate=".3" data-direction="vertical">
                 <p class="text-to-toggle">
                     <span class="masked-first-text">
@@ -76,15 +75,17 @@
         </div>
 
         <div class="line-container">
-            <svg width="2801" height="1309" viewBox="0 0 2801 1309" fill="none" preserveAspectRatio="xMidYMax meet">
-                <path d="M2796.5 1229C2714.83 1227.83 2834 1076.5 2759.5 1076.5C2685 1076.5 2351.07 972 2229 972C2149 972 2094 1320 1957.5 1292C1821 1264 2013.69 907.305 1822.5 792C1725.5 733.5 1661 694.604 1468 792C1344.65 854.246 1270.97 812.616 1208.5 713.709C1179 667 1026.5 469.791 892 427C837.435 409.64 612 360 489.5 436.5C383.055 502.974 306.5 633.709 396.5 713.709C484.25 791.71 672.5 737.5 758.5 566.209C779.001 525.377 794.198 355.38 780.5 300.709C748 171 687 110.709 644.5 81.7094C602 52.7094 510.5 -5.29071 396.5 22.2093C135 85.2904 14 380.709 14 380.709" stroke="url(#paint0_linear_1_28)" stroke-width="30" stroke-linecap="round"/>
-                <defs>
-                <linearGradient id="paint0_linear_1_28" x1="1222.5" y1="-80" x2="1405.25" y2="1293.6" gradientUnits="userSpaceOnUse">
-                <stop stop-color="#862FBD"/>
-                <stop offset="1" stop-color="#3844EE"/>
-                </linearGradient>
-                </defs>
-            </svg>
+            <div class="parallax" data-rate=".075" data-direction="vertical">
+                <svg width="2802" height="1291" viewBox="0 0 2802 1291" fill="none" preserveAspectRatio="xMidYMax meet">
+                    <path d="M2797.5 1211C2715.83 1209.83 2835 1058.5 2760.5 1058.5C2686 1058.5 2352.07 954 2230 954C2150 954 2095 1302 1958.5 1274C1822 1246 2014.69 889.305 1823.5 774C1597.91 637.95 1379.44 926.152 1209.5 695.709C1075.5 514 730.108 228.466 490.5 418.5C185.965 660.028 585.37 895.033 759.5 548.209C1021.56 26.2428 204 -244.5 15 362.709" stroke="url(#paint0_linear_1_28)" stroke-width="30" stroke-linecap="round"/>
+                    <defs>
+                    <linearGradient id="paint0_linear_1_28" x1="1223.5" y1="-98.0001" x2="1406.25" y2="1275.6" gradientUnits="userSpaceOnUse">
+                    <stop stop-color="#862FBD"/>
+                    <stop offset="1" stop-color="#3844EE"/>
+                    </linearGradient>
+                    </defs>
+                </svg>
+            </div>
         </div>
 
         
