description text responsiveness

--- a/index.html
+++ b/index.html
@@ -87,11 +87,22 @@
                 </svg>
             </div>
         </div>
-
         
         <div class="photo-container">
             <div class="parallax" data-rate=".4" data-direction="vertical">
                 <img src="/imgs/photo.jpg" style="border-radius: 50%;" width="200">
+            </div>
+        </div>
+
+        <div class="my-description">
+            <div class="parallax" data-rate=".35" data-direction="vertical">
+                <p class="text-to-toggle">
+                    I am a innovative computer science student with interdisciplinary interests in 
+                    <span class="keyword">computer vision</span>, <span class="keyword">graphics</span>, <span class="keyword">robotics</span>, and <span class="keyword">AI</span>. 
+                    I have been working on an ML-based procedural modeling technique to interpret 2D sketches and convert them into 3D building assets using Unity and CSG modeling. <br>
+                    My patent on a novel device for compressing waste highlights my creative problem-solving abilities. With strong technical skills in <span class="keyword-sec">Java</span>, <span class="keyword-sec">Python</span>, <span class="keyword-sec">C#</span>, <span class="keyword-sec">Unity</span>, <span class="keyword-sec">OpenCV</span>, <span class="keyword-sec">TensorFlow</span>, <span class="keyword-sec">Docker</span> and experience interning as a software engineer, 
+                    I'm an adept programmer prepared to build advanced applications at the frontier of computer vision and AI.
+                </p>
             </div>
         </div>
 
