title text sentence

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
         <div class="rotating-text">
             <p class="text-to-toggle">
-                Greetings, and welcome to a world of</p>
+                Greetings, and welcome to my world of</p>
             <p class="text-to-animation">
               <span class="word alizarin">possibilities.</span>
               <span class="word wisteria">creation.</span>
