--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
         <link rel="stylesheet" href="/css/cursorTail.css">
         <link rel="stylesheet" href="/css/daynight.css">
         <link rel="stylesheet" href="/css/titleText.css">
+        <link rel="stylesheet" href="/css/tooltip.css">
         <link rel="stylesheet" href="/css/style.css">
+        <link rel="stylesheet" href="/css/responsive.css">
         <title>Welcome, I'm Daniel Atlas</title>
         <link rel="icon" type="image/png" href="/imgs/favicon.png">
     </head>
@@ -105,6 +107,112 @@
                 </p>
             </div>
         </div>
+
+        <div class="tooltip-container-linked">
+            <div class="parallax" data-rate=".35" data-direction="vertical">
+                <div class="tooltip">
+                    <div class="profile">
+                        <div class="user">
+                            <div class="img">
+                                <img src="/imgs/photo.jpg" style="border-radius: 50%;" width="40">
+                            </div>
+                            <div class="details">
+                                <div class="name">Yiming Chen</div>
+                                <div class="username">@danielatlas3455</div>
+                            </div>
+                        </div>
+                        <div class="about">50+ Connections</div>
+                    </div>
+                </div>
+                <div class="text">
+                    <a class="icon" href="https://www.linkedin.com/in/yiming-chen-b8447122a/">
+                        <div class="layer">
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                            <span class="fab fa-linkedin">
+                                <svg viewBox="0 0 448 512" height="1em">
+                                    <path
+                                    d="M100.28 448H7.4V148.9h92.88zM53.79 108.1C24.09 108.1 0 83.5 0 53.8a53.79 53.79 0 0 1 107.58 0c0 29.7-24.1 54.3-53.79 54.3zM447.9 448h-92.68V302.4c0-34.7-.7-79.2-48.29-79.2-48.29 0-55.69 37.7-55.69 76.7V448h-92.78V148.9h89.08v40.8h1.3c12.4-23.5 42.69-48.3 87.88-48.3 94 0 111.28 61.9 111.28 142.3V448z"
+                                    ></path>
+                                </svg>
+                            </span>
+                        </div>
+                        <div class="text">LinkedIn</div>
+                    </a>
+                </div>
+            </div>
+        </div>
+        
+        <div class="tooltip-container-gmail">
+            <div class="parallax" data-rate=".35" data-direction="vertical">
+                <div class="tooltip">
+                    <div class="profile">
+                        <div class="user">
+                            <div class="img">
+                                <img src="/imgs/sonic.jpg" style="border-radius: 50%;" width="40">
+                            </div>
+                            <div class="details">
+                                <div class="name">Daniel Atlas</div>
+                                <div class="username">danielatlas3455</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="text">
+                    <a class="icon" href="mailto:danielatlas3455@gmail.com">
+                        <div class="layer">
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                            <span class="fab fa-linkedin">
+                                <svg width="32" height="32" data-name="Layer 1" viewBox="0 0 32 32" id="gmail">
+                                    <path fill="#ea4435" d="M16.58,19.1068l-12.69-8.0757A3,3,0,0,1,7.1109,5.97l9.31,5.9243L24.78,6.0428A3,3,0,0,1,28.22,10.9579Z"></path><path fill="#00ac47" d="M25.5,5.5h4a0,0,0,0,1,0,0v18a3,3,0,0,1-3,3h0a3,3,0,0,1-3-3V7.5a2,2,0,0,1,2-2Z" transform="rotate(180 26.5 16)"></path><path fill="#ffba00" d="M29.4562,8.0656c-.0088-.06-.0081-.1213-.0206-.1812-.0192-.0918-.0549-.1766-.0823-.2652a2.9312,2.9312,0,0,0-.0958-.2993c-.02-.0475-.0508-.0892-.0735-.1354A2.9838,2.9838,0,0,0,28.9686,6.8c-.04-.0581-.09-.1076-.1342-.1626a3.0282,3.0282,0,0,0-.2455-.2849c-.0665-.0647-.1423-.1188-.2146-.1771a3.02,3.02,0,0,0-.24-.1857c-.0793-.0518-.1661-.0917-.25-.1359-.0884-.0461-.175-.0963-.267-.1331-.0889-.0358-.1837-.0586-.2766-.0859s-.1853-.06-.2807-.0777a3.0543,3.0543,0,0,0-.357-.036c-.0759-.0053-.1511-.0186-.2273-.018a2.9778,2.9778,0,0,0-.4219.0425c-.0563.0084-.113.0077-.1689.0193a33.211,33.211,0,0,0-.5645.178c-.0515.022-.0966.0547-.1465.0795A2.901,2.901,0,0,0,23.5,8.5v5.762l4.72-3.3043a2.8878,2.8878,0,0,0,1.2359-2.8923Z"></path><path fill="#4285f4" d="M5.5,5.5h0a3,3,0,0,1,3,3v18a0,0,0,0,1,0,0h-4a2,2,0,0,1-2-2V8.5a3,3,0,0,1,3-3Z"></path><path fill="#c52528" d="M2.5439,8.0656c.0088-.06.0081-.1213.0206-.1812.0192-.0918.0549-.1766.0823-.2652A2.9312,2.9312,0,0,1,2.7426,7.32c.02-.0475.0508-.0892.0736-.1354A2.9719,2.9719,0,0,1,3.0316,6.8c.04-.0581.09-.1076.1342-.1626a3.0272,3.0272,0,0,1,.2454-.2849c.0665-.0647.1423-.1188.2147-.1771a3.0005,3.0005,0,0,1,.24-.1857c.0793-.0518.1661-.0917.25-.1359A2.9747,2.9747,0,0,1,4.3829,5.72c.089-.0358.1838-.0586.2766-.0859s.1853-.06.2807-.0777a3.0565,3.0565,0,0,1,.357-.036c.076-.0053.1511-.0186.2273-.018a2.9763,2.9763,0,0,1,.4219.0425c.0563.0084.113.0077.169.0193a2.9056,2.9056,0,0,1,.286.0888,2.9157,2.9157,0,0,1,.2785.0892c.0514.022.0965.0547.1465.0795a2.9745,2.9745,0,0,1,.3742.21A2.9943,2.9943,0,0,1,8.5,8.5v5.762L3.78,10.9579A2.8891,2.8891,0,0,1,2.5439,8.0656Z"></path>
+                                </svg>
+                            </span>
+                        </div>
+                        <div class="text">Gmail</div>
+                    </a>
+                </div>
+            </div>
+        </div>
+
+        <div class="tooltip-container-github">
+            <div class="parallax" data-rate=".35" data-direction="vertical">
+                <div class="tooltip">
+                    <div class="profile">
+                        <div class="user">
+                            <div class="img">
+                                <img src="/imgs/sonic.jpg" style="border-radius: 50%;" width="40">
+                            </div>
+                            <div class="details">
+                                <div class="name">Daniel Atlas</div>
+                                <div class="username">@Spectraorder</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="text">
+                    <a class="icon" href="https://github.com/Spectraorder">
+                        <div class="layer">
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                            <span class="fab fa-linkedin">
+                                <svg data-name="Layer 1" viewBox="0 0 24 24" id="github">
+                                    <path d="M12,2.2467A10.00042,10.00042,0,0,0,8.83752,21.73419c.5.08752.6875-.21247.6875-.475,0-.23749-.01251-1.025-.01251-1.86249C7,19.85919,6.35,18.78423,6.15,18.22173A3.636,3.636,0,0,0,5.125,16.8092c-.35-.1875-.85-.65-.01251-.66248A2.00117,2.00117,0,0,1,6.65,17.17169a2.13742,2.13742,0,0,0,2.91248.825A2.10376,2.10376,0,0,1,10.2,16.65923c-2.225-.25-4.55-1.11254-4.55-4.9375a3.89187,3.89187,0,0,1,1.025-2.6875,3.59373,3.59373,0,0,1,.1-2.65s.83747-.26251,2.75,1.025a9.42747,9.42747,0,0,1,5,0c1.91248-1.3,2.75-1.025,2.75-1.025a3.59323,3.59323,0,0,1,.1,2.65,3.869,3.869,0,0,1,1.025,2.6875c0,3.83747-2.33752,4.6875-4.5625,4.9375a2.36814,2.36814,0,0,1,.675,1.85c0,1.33752-.01251,2.41248-.01251,2.75,0,.26251.1875.575.6875.475A10.0053,10.0053,0,0,0,12,2.2467Z"></path>
+                                </svg>
+                            </span>
+                        </div>
+                        <div class="text">Github</div>
+                    </a>
+                </div>
+            </div>
+        </div>
+          
 
         <div class="scroll-space"></div>
 
