--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     <div class="profile">
                         <div class="user">
                             <div class="img">
-                                <img src="/imgs/photo.jpg" style="border-radius: 50%;" width="40">
+                                <img src="/imgs/pro_photo.png" style="border-radius: 50%;" width="40">
                             </div>
                             <div class="details">
                                 <div class="name">Yiming Chen</div>
@@ -151,7 +151,7 @@
                     <div class="profile">
                         <div class="user">
                             <div class="img">
-                                <img src="/imgs/sonic.jpg" style="border-radius: 50%;" width="40">
+                                <img src="/imgs/gmail_photo.jpg" style="border-radius: 50%;" width="40">
                             </div>
                             <div class="details">
                                 <div class="name">Daniel Atlas</div>
