still in dev alarm

--- a/index.html
+++ b/index.html
@@ -213,6 +213,11 @@
             </div>
         </div>
 
+
+        <div class="alarm" id="alarmMessage">
+            This website is still in development. Thank you for your patience!
+        </div>
+
         <!-- <canvas class="webgl"></canvas> -->
 
         <!-- <div class="scroll-space"></div> -->
