mouse animation update

--- a/index.html
+++ b/index.html
@@ -13,17 +13,7 @@
         <link rel="icon" type="image/png" href="/imgs/favicon.png">
     </head>
     <body>
-        <section class="mouseTail">
-            <div class="circleTail"></div>
-            <div class="circleTail"></div>
-            <div class="circleTail"></div>
-            <div class="circleTail"></div>
-            <div class="circleTail"></div>
-            <div class="circleTail"></div>
-            <div class="circleTail"></div>
-            <div class="circleTail"></div>
-            <div class="circleTail"></div>
-        </section>
+        <div class="mouseCircle"></div>
 
         <label class="theme-switch">
             <input type="checkbox" class="theme-switch__checkbox">
@@ -224,7 +214,7 @@
         <script src="/js/titleText.js"></script>
         <script src="/js/mouseScript.js"></script>
         <script src="/js/lineScript.js"></script>
-        <script type="module" src="/js/projects.js"></script>
+        <!-- <script type="module" src="/js/projects.js"></script> -->
         <script src="/js/script.js"></script>
         
     </body>
