responsive font size

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <p class="close-text">Close</p>
                 </div>
                 <p>
-                    <svg viewBox="0 0 448 512" width="24" height="24">
+                    <svg viewBox="0 0 448 512">
                         <path d="M8 256a56 56 0 1 1 112 0A56 56 0 1 1 8 256zm160 0a56 56 0 1 1 112 0 56 56 0 1 1 -112 0zm216-56a56 56 0 1 1 0 112 56 56 0 1 1 0-112z"/>
                     </svg>
                 </p>
@@ -136,7 +136,7 @@
             
             <div class="photo-container">
                 <div class="parallax" data-rate=".4" data-direction="vertical">
-                    <img src="/imgs/photo.jpg" style="border-radius: 50%;" width="200">
+                    <img src="/imgs/photo.jpg" style="border-radius: 50%;">
                 </div>
             </div>
     
