--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         <link rel="icon" type="image/png" href="/imgs/favicon.png">
     </head>
     <body>
+        <audio id="background-music" src="music/A Piacere - Orchestra.mp3" preload="auto"></audio>
+
         <div class="mouseCircle"></div>
 
         <div class="top-nav">
@@ -112,7 +114,7 @@
                         </span>
                         <br>
                         <span class="masked-second-text">
-                            <span class="second-text">New York University</span>
+                            <span class="second-text">Georgia Institute of Technology</span>
                         </span>
                     </p>
                 </div>
