menu card title responsive

--- a/index.html
+++ b/index.html
@@ -38,27 +38,25 @@
                     </svg>
                 </p>
             </div>
-
-            
         </div>
 
         
 
         <div class="menu-sidebar">
             <div class="menu-card">
-                <div class="menu-card-title">Community</div>
+                <div class="menu-card-title">About Me</div>
                 <div class="menu-card-copy">
                     <p>A description of card</p>
                 </div>
             </div>
             <div class="menu-card">
-                <div class="menu-card-title">Community</div>
+                <div class="menu-card-title">Works</div>
                 <div class="menu-card-copy">
                     <p>A description of card</p>
                 </div>
             </div>
             <div class="menu-card">
-                <div class="menu-card-title">Catalog</div>
+                <div class="menu-card-title">Contact</div>
                 <div class="menu-card-copy">
                     <p>A description of card</p>
                 </div>
